--- a/k8s/client-deployment.yml
+++ b/k8s/client-deployment.yml
@@ -1,6 +1,6 @@
 apiVersion: apps/v1
 kind: Deployment
-matadata:
+metadata:
   name: client-deployment
 spec:
   replicas: 3
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: client
-          image: medamin2019/multi-client
+          image: medamin2019/fib-client
           ports:
             - containerPort: 3000
