--- a/k8s/worker-deployment.yml
+++ b/k8s/worker-deployment.yml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: worker-deployment
 spec:
-  replicas:
+  replicas: 1
   selector:
     matchLabels:
       component: worker
