--- a/k8s/database-persistent-volume-claim.yaml
+++ b/k8s/database-persistent-volume-claim.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
-kind: PersistanceVolumeClaim
+kind: PersistentVolumeClaim
 metadata:
-  name: database-persistance-volume-claim
+  name: database-persistent-volume-claim
 spec:
   accessModes:
     - ReadWriteOnce
