--- a/k8s/postgres-deployment.yaml
+++ b/k8s/postgres-deployment.yaml
@@ -14,8 +14,8 @@ spec:
     spec:
       volumes:
         - name: postgres-storage
-          persistanceVolumeClaim:
-            claimName: database-persistance-volume-claim
+          persistentVolumeClaim:
+            claimName: database-persistent-volume-claim
       containers:
         - name: postgres
           image: postgres
