--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -15,3 +15,8 @@ spec:
       containers:
         - name: worker
           image: medamin2019/fib-worker
+          env:
+            - name: REDIS_HOST
+              value: redis-cluster-ip-servic
+            - name: REDIS_PORT
+              value: 6379
