--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -32,7 +32,7 @@ spec:
               value: postgres
             - name: PGPASSWORD
               valueFrom:
-                secretkeyRef:
+                secretKeyRef:
                   name: pgpassword
                   key: PGPASSWORD
 
