--- a/k8s/ingress-service.yml
+++ b/k8s/ingress-service.yml
@@ -7,8 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
     rules:
-        - host: k8s-multi.com
-          http:
+       - http:
             paths:
               - path: /
                 backend:
