--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
 before_install:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker build -t medamin2019/fib-client-test -f ./frontend/Dockerfile.dev ./frontend
-  - tee $K8S_CONFIG config-master.json
+  - echo $K8S_CONFIG | tee config-master.json
   - kubectl config --kubeconfig=config-master.json
 script:
   - docker run mesamin2019/fib-client-test npm test -- --coverage
