--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
   - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
   - chmod +x ./kubectl
   - sudo mv ./kubectl /usr/local/bin/kubectl
+  - mkdir -p ${HOME}/.kube
   - echo $K8S_CONFIG | tee ${HOME}/.kube/config.json
   - export KUBECONFIG=${HOME}/.kube/config.json
   - kubecl config view
