--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,42 @@
-sudo: required
+language: shell
+os: linux
 services:
   - docker
 env:
   global:
     - SHA=$(git rev-parse HEAD)
+    - KUBECONFIG=~/.kube/config
+    - KEYSHOME=$HOME/keys
 before_install:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker build -t medamin2019/fib-client-test -f ./frontend/Dockerfile.dev ./frontend
+  - docker build -t $DOCKER_USERNAME/fib-client-test -f ./frontend/Dockerfile.dev ./frontend
+
+  - mkdir ~/keys
+  - echo $CERTAUTH | base64 --decode > $KEYSHOME/ca.pem
+  - echo $CREDPERM | base64 --decode > $KEYSHOME/cred.pem
+  - echo $REDKEY | base64 --decode > $KEYSHOME/cred-key.pem
+
   - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
   - chmod +x ./kubectl
   - sudo mv ./kubectl /usr/local/bin/kubectl
-  - mkdir -p ${HOME}/.kube
-  - echo $K8S_CONFIG | tee ${HOME}/.kube/config.json
-  - export KUBECONFIG=${HOME}/.kube/config.json
-  - kubectl config view
+
+  - kubectl config set-cluster $NAME --certificate-authority=$KEYSHOME/ca.pem --embed-certs=true --server=$KUBESERVER
+  - kubectl config set-context $NAME --cluster=$NAME --user=$NAME
+  - kubectl config use-context $NAME
+  - kubectl config set-credentials $NAME --client-certificate=$KEYSHOME/cred.pem --client-key=$KEYSHOME/cred-key.pem --embed-certs=true --username=$KUBEUSERNAME --password=$KUBEPASSWORD
+  - kubectl config set-credentials $NAME-basic-auth --username=$KUBEUSERNAME --password=$KUBEPASSWORD
+
+  - echo 'script is working'
+  - cat $KUBECONFIG
+  - kubectl get nodes
+
+
+  
 script:
-  - docker run mesamin2019/fib-client-test npm test -- --coverage
+  - docker run $DOCKER_USERNAME/fib-client-test npm test -- --coverage
 
 deploy:
   provider: script
   script: bash ./deploy.sh
   on:
-    branch: master
+    branch: master  
