--- a/k8s/client-deployment.yaml
+++ b/k8s/client-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: client
-          image: medamin2019/fib-client
+          image: sametma/fib-client
           ports:
             - containerPort: 3000
