--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: worker
-          image: medamin2019/fib-worker
+          image: sametma/fib-worker
           env:
             - name: REDIS_HOST
               value: redis-cluster-ip-service
